source/blender/python/intern/bpy_rna_anim.cc
@@ -407,8 +407,9 @@ PyObject *pyrna_struct_keyframe_insert(BPy_StructRNA *self, PyObject *args, PyOb
     const std::optional<blender::StringRefNull> channel_group = group_name ?
                                                                     std::optional(group_name) :
                                                                     std::nullopt;
+    PointerRNA id_pointer = RNA_id_pointer_create(self->ptr.owner_id);
     CombinedKeyingResult combined_result = insert_keyframes(G_MAIN,
-                                                            &self->ptr,
+                                                            &id_pointer,
                                                             channel_group,
                                                             {{path_full, {}, index}},
                                                             std::nullopt,
